# MadSoftTestTask

./: .dockerignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml
media_files_service/: .env.dist  README.md  pyproject.toml
media_files_service/docker/: Dockerfile  docker-entrypoint.sh
media_files_service/media_files_app/: config.py  main.py
media_files_service/media_files_app/application/interactors/: file.py
media_files_service/media_files_app/application/interfaces/: common.py  storage.py
media_files_service/media_files_app/controllers/http/routers/: file.py  main.py
media_files_service/media_files_app/domain/exceptions/: base.py  storage.py
media_files_service/media_files_app/infrastructure/: storage.py
media_files_service/media_files_app/ioc/: interactors.py  main.py
memes_service/: .env.dist  Makefile  README.md  alembic.ini  pyproject.toml
memes_service/docker/: Dockerfile
memes_service/memes_app/: config.py  main.py
memes_service/memes_app/application/dto/: meme.py
memes_service/memes_app/application/interactors/: file.py  meme.py
memes_service/memes_app/application/interfaces/: media_files_service_api.py  meme.py
memes_service/memes_app/controllers/http/routers/: dependencies.py  file.py  main.py  meme.py
memes_service/memes_app/controllers/schemas/: meme.py
memes_service/memes_app/domain/entities/: meme.py
memes_service/memes_app/domain/exceptions/: media_files_service.py  meme.py
memes_service/memes_app/infrastructure/: media_files_service_api.py
memes_service/memes_app/infrastructure/database/: database.py
memes_service/memes_app/infrastructure/database/migrations/: env.py
memes_service/memes_app/infrastructure/database/migrations/versions/: 50dab0c8e955_add_image_url_to_meme.py  a764d85d3949_init.py
memes_service/memes_app/infrastructure/database/models/: __init__.py  base.py  meme.py
memes_service/memes_app/infrastructure/gateways/: meme.py
memes_service/memes_app/ioc/: gateways.py  interactors.py  main.py
memes_service/tests/: .env.test  conftest.py  docker-compose.yml  docker_services.py
memes_service/tests/routes/test_meme/: conftest.py  test_meme.py
