[tool.poetry]
name = "media-files-service"
version = "0.1.0"
description = ""
authors = ["PrinterOMG <PrinterOMG@ya.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
uvloop = {markers = "sys_platform != \"win32\"", version = "^0.19.0"}
httptools = "^0.6.1"
gunicorn = "^22.0.0"
pydantic-settings = "^2.3.4"
dishka = "^1.2.0"
python-multipart = "^0.0.9"
minio = "^7.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
