[tool.poetry]
name = "memes-service"
version = "0.1.0"
description = ""
authors = ["PrinterOMG <PrinterOMG@ya.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
uvloop = {markers = "sys_platform != \"win32\"", version = "^0.19.0"}
httptools = "^0.6.1"
gunicorn = "^22.0.0"
pydantic-settings = "^2.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
