[tool.poetry]
name = "memes-service"
version = "0.1.0"
description = ""
authors = ["PrinterOMG <PrinterOMG@ya.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
uvloop = {markers = "sys_platform != \"win32\"", version = "^0.19.0"}
httptools = "^0.6.1"
gunicorn = "^22.0.0"
pydantic-settings = "^2.3.4"
sqlalchemy = {extras = ["asyncio", "asyncpg"], version = "^2.0.31"}
alembic = "^1.13.2"
dishka = "^1.2.0"
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.30.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
